--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "author": "Lisbeth Quintero <lquintero28@live.com>",
   "license": "MIT",
   "description": "",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "node-fetch": "^3.2.10"
+  }
 }
